--- a/config/user/2/config.json
+++ b/config/user/2/config.json
@@ -1,1 +1,1 @@
-{}
+{"shortcut":"[{\"name\":\"Acervos\",\"link\":\"adm_acervo.html\",\"icone\":\"mdi-bank\",\"janela\":\"pop-up\",\"label\":\"Cadastro de Acervos\",\"width\":\"auto\",\"access\":\"o!or1o9t2X)O03o\\\"s:opuqU)4o*,0#8y+xq#do5r(o.Vo6WJ\",\"x\":100,\"y\":100},{\"name\":\"\u00cdtens\",\"link\":\"adm_itens.html\",\"icone\":\"mdi-postage-stamp\",\"janela\":\"pop-up\",\"label\":\"Cadastro de \u00cdtens\",\"width\":\"auto\",\"access\":\"o!or1o9t2X)O03o\\\"s:opuqU)4o*,0#8y+xq#do5r(o.Vo6WJ\",\"x\":210,\"y\":102}]"}
